--- a/css/3_0_style.css
+++ b/css/3_0_style.css
@@ -7,6 +7,7 @@ body {
   background-size: 100vw;
   background-repeat: repeat-y;
   background-position: center;
+  width: 100vw;
   height: 1562px;
 }
 .introuduce {
