--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@ body {
   background-repeat: repeat-y;
   background-position: center;
   height: 100vh;
+  width: 100vw;
 }
 .logo {
   margin: auto;
